; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_board_eeprom.c_oc_rd_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_board_eeprom.c_oc_rd_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OC_I2C_CMD_REG = common dso_local global i32 0, align 4
@OC_STATUS_TIP = common dso_local global i32 0, align 4
@OC_I2C_DATA_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @oc_rd_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @oc_rd_cmd(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @OC_I2C_CMD_REG, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @oc_write_reg(i32 %5, i32 %6)
  %8 = load i32, i32* @OC_STATUS_TIP, align 4
  %9 = call i64 @oc_wait_on_status(i32 %8)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load i32, i32* @OC_I2C_DATA_REG, align 4
  %14 = call i32 @oc_read_reg(i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %12, %11
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @oc_write_reg(i32, i32) #1

declare dso_local i64 @oc_wait_on_status(i32) #1

declare dso_local i32 @oc_read_reg(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
